template/peg/templateParser.js
define([], function () {
  /*
   * Generated by PEG.js 0.7.0.
   *
   * http://pegjs.majda.cz/
   */
  
  function quote(s) {
    /*
     * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
     * string literal except for the closing quote character, backslash,
     * carriage return, line separator, paragraph separator, and line feed.
     * Any character may appear in the form of an escape sequence.
     *
     * For portability, we also escape escape all control and non-ASCII
     * characters. Note that "\0" and "\v" escape sequences are not used
     * because JSHint does not like the first and IE the second.
     */
     return '"' + s
      .replace(/\\/g, '\\\\')  // backslash
      .replace(/"/g, '\\"')    // closing quote character
      .replace(/\x08/g, '\\b') // backspace
      .replace(/\t/g, '\\t')   // horizontal tab
      .replace(/\n/g, '\\n')   // line feed
      .replace(/\f/g, '\\f')   // form feed
      .replace(/\r/g, '\\r')   // carriage return
      .replace(/[\x00-\x07\x0B\x0E-\x1F\x80-\uFFFF]/g, escape)
      + '"';
  }
  
  var result = {
    /*
     * Parses the input with a generated parser. If the parsing is successfull,
     * returns a value explicitly or implicitly specified by the grammar from
     * which the parser was generated (see |PEG.buildParser|). If the parsing is
     * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
     */
    parse: function(input, startRule) {
      var parseFunctions = {
        "start": parse_start,
        "ContentOrEmpty": parse_ContentOrEmpty,
        "Content": parse_Content,
        "HtmlFragment": parse_HtmlFragment,
        "IfTag": parse_IfTag,
        "IfTagOpen": parse_IfTagOpen,
        "IfTagClose": parse_IfTagClose,
        "ElseIfTag": parse_ElseIfTag,
        "ElseTag": parse_ElseTag,
        "ForTag": parse_ForTag,
        "ForTagOpen": parse_ForTagOpen,
        "ForTagClose": parse_ForTagClose,
        "WhenTag": parse_WhenTag,
        "WhenTagOpen": parse_WhenTagOpen,
        "WhenTagClose": parse_WhenTagClose,
        "WhenErrorTag": parse_WhenErrorTag,
        "WhenProgressTag": parse_WhenProgressTag,
        "PlaceholderTag": parse_PlaceholderTag,
        "DataTag": parse_DataTag,
        "AliasTag": parse_AliasTag,
        "AttributeSet": parse_AttributeSet,
        "Attribute": parse_Attribute,
        "AttributeName": parse_AttributeName,
        "AttributeValue": parse_AttributeValue,
        "OpenToken": parse_OpenToken,
        "CloseToken": parse_CloseToken,
        "S": parse_S
      };
      
      if (startRule !== undefined) {
        if (parseFunctions[startRule] === undefined) {
          throw new Error("Invalid rule name: " + quote(startRule) + ".");
        }
      } else {
        startRule = "start";
      }
      
      var pos = { offset: 0, line: 1, column: 1, seenCR: false };
      var reportFailures = 0;
      var rightmostFailuresPos = { offset: 0, line: 1, column: 1, seenCR: false };
      var rightmostFailuresExpected = [];
      
      function padLeft(input, padding, length) {
        var result = input;
        
        var padLength = length - input.length;
        for (var i = 0; i < padLength; i++) {
          result = padding + result;
        }
        
        return result;
      }
      
      function escape(ch) {
        var charCode = ch.charCodeAt(0);
        var escapeChar;
        var length;
        
        if (charCode <= 0xFF) {
          escapeChar = 'x';
          length = 2;
        } else {
          escapeChar = 'u';
          length = 4;
        }
        
        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
      }
      
      function clone(object) {
        var result = {};
        for (var key in object) {
          result[key] = object[key];
        }
        return result;
      }
      
      function advance(pos, n) {
        var endOffset = pos.offset + n;
        
        for (var offset = pos.offset; offset < endOffset; offset++) {
          var ch = input.charAt(offset);
          if (ch === "\n") {
            if (!pos.seenCR) { pos.line++; }
            pos.column = 1;
            pos.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            pos.line++;
            pos.column = 1;
            pos.seenCR = true;
          } else {
            pos.column++;
            pos.seenCR = false;
          }
        }
        
        pos.offset += n;
      }
      
      function matchFailed(failure) {
        if (pos.offset < rightmostFailuresPos.offset) {
          return;
        }
        
        if (pos.offset > rightmostFailuresPos.offset) {
          rightmostFailuresPos = clone(pos);
          rightmostFailuresExpected = [];
        }
        
        rightmostFailuresExpected.push(failure);
      }
      
      function parse_start() {
        var result0;
        var pos0;
        
        pos0 = clone(pos);
        result0 = parse_ContentOrEmpty();
        if (result0 !== null) {
          result0 = (function(offset, line, column, content) {
        		if (content) {
        			content.aliases = aliases;
        		}
        		return content;
        	})(pos0.offset, pos0.line, pos0.column, result0);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_ContentOrEmpty() {
        var result0;
        
        result0 = parse_Content();
        result0 = result0 !== null ? result0 : "";
        return result0;
      }
      
      function parse_Content() {
        var result0, result1;
        var pos0;
        
        pos0 = clone(pos);
        result1 = parse_IfTag();
        if (result1 === null) {
          result1 = parse_ForTag();
          if (result1 === null) {
            result1 = parse_WhenTag();
            if (result1 === null) {
              result1 = parse_PlaceholderTag();
              if (result1 === null) {
                result1 = parse_DataTag();
                if (result1 === null) {
                  result1 = parse_AliasTag();
                  if (result1 === null) {
                    result1 = parse_HtmlFragment();
                  }
                }
              }
            }
          }
        }
        if (result1 !== null) {
          result0 = [];
          while (result1 !== null) {
            result0.push(result1);
            result1 = parse_IfTag();
            if (result1 === null) {
              result1 = parse_ForTag();
              if (result1 === null) {
                result1 = parse_WhenTag();
                if (result1 === null) {
                  result1 = parse_PlaceholderTag();
                  if (result1 === null) {
                    result1 = parse_DataTag();
                    if (result1 === null) {
                      result1 = parse_AliasTag();
                      if (result1 === null) {
                        result1 = parse_HtmlFragment();
                      }
                    }
                  }
                }
              }
            }
          }
        } else {
          result0 = null;
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, nodes) {
        		// Flatten content into a single HTML string
        		// with <script id></script> tags marking place for the template nodes.
        		var htmlFragmentBuffer = [],
        			templateNodes = [];
        
        		for(var i = 0; i < nodes.length; i++) {
        			var node = nodes[i];
        			if (node instanceof HtmlFragmentNode) {
        				htmlFragmentBuffer.push(node.html);
        			}
        			else if (node.type === 'alias') {
        				aliases[node.from] = node.to;
        			}
        			else {
        				// TODO: Colin prefers the use of comment nodes, but it appears we'll need to stick w/ <script> for this step since it is queryable.
        				node.id = getNextId();
        				htmlFragmentBuffer.push('<script data-template-node-id="' + node.id + '"></script>');
        				templateNodes.push(node);
        			}
        		}
        
        		// TODO: Make proper constructor for this.
        		return {
        			type: 'fragment',
        			html: htmlFragmentBuffer.join(''),
        			templateNodes: templateNodes
        		};
        	})(pos0.offset, pos0.line, pos0.column, result0);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_HtmlFragment() {
        var result0, result1, result2;
        var pos0, pos1, pos2, pos3, pos4, pos5;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        pos2 = clone(pos);
        pos3 = clone(pos);
        reportFailures++;
        pos4 = clone(pos);
        pos5 = clone(pos);
        reportFailures++;
        if (input.charCodeAt(pos.offset) === 60) {
          result1 = "<";
          advance(pos, 1);
        } else {
          result1 = null;
          if (reportFailures === 0) {
            matchFailed("\"<\"");
          }
        }
        reportFailures--;
        if (result1 !== null) {
          result1 = "";
          pos = clone(pos5);
        } else {
          result1 = null;
        }
        if (result1 !== null) {
          result2 = parse_IfTagOpen();
          if (result2 !== null) {
            result1 = [result1, result2];
          } else {
            result1 = null;
            pos = clone(pos4);
          }
        } else {
          result1 = null;
          pos = clone(pos4);
        }
        if (result1 === null) {
          result1 = parse_ElseIfTag();
          if (result1 === null) {
            result1 = parse_ElseTag();
            if (result1 === null) {
              result1 = parse_IfTagClose();
              if (result1 === null) {
                result1 = parse_ForTagOpen();
                if (result1 === null) {
                  result1 = parse_ForTagClose();
                  if (result1 === null) {
                    result1 = parse_WhenTagOpen();
                    if (result1 === null) {
                      result1 = parse_WhenTagClose();
                      if (result1 === null) {
                        result1 = parse_WhenErrorTag();
                        if (result1 === null) {
                          result1 = parse_WhenProgressTag();
                          if (result1 === null) {
                            result1 = parse_PlaceholderTag();
                            if (result1 === null) {
                              result1 = parse_DataTag();
                              if (result1 === null) {
                                result1 = parse_AliasTag();
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
        reportFailures--;
        if (result1 === null) {
          result1 = "";
        } else {
          result1 = null;
          pos = clone(pos3);
        }
        if (result1 !== null) {
          if (input.length > pos.offset) {
            result2 = input.charAt(pos.offset);
            advance(pos, 1);
          } else {
            result2 = null;
            if (reportFailures === 0) {
              matchFailed("any character");
            }
          }
          if (result2 !== null) {
            result1 = [result1, result2];
          } else {
            result1 = null;
            pos = clone(pos2);
          }
        } else {
          result1 = null;
          pos = clone(pos2);
        }
        if (result1 !== null) {
          result1 = (function(offset, line, column, character) { return character; })(pos1.offset, pos1.line, pos1.column, result1[1]);
        }
        if (result1 === null) {
          pos = clone(pos1);
        }
        if (result1 !== null) {
          result0 = [];
          while (result1 !== null) {
            result0.push(result1);
            pos1 = clone(pos);
            pos2 = clone(pos);
            pos3 = clone(pos);
            reportFailures++;
            pos4 = clone(pos);
            pos5 = clone(pos);
            reportFailures++;
            if (input.charCodeAt(pos.offset) === 60) {
              result1 = "<";
              advance(pos, 1);
            } else {
              result1 = null;
              if (reportFailures === 0) {
                matchFailed("\"<\"");
              }
            }
            reportFailures--;
            if (result1 !== null) {
              result1 = "";
              pos = clone(pos5);
            } else {
              result1 = null;
            }
            if (result1 !== null) {
              result2 = parse_IfTagOpen();
              if (result2 !== null) {
                result1 = [result1, result2];
              } else {
                result1 = null;
                pos = clone(pos4);
              }
            } else {
              result1 = null;
              pos = clone(pos4);
            }
            if (result1 === null) {
              result1 = parse_ElseIfTag();
              if (result1 === null) {
                result1 = parse_ElseTag();
                if (result1 === null) {
                  result1 = parse_IfTagClose();
                  if (result1 === null) {
                    result1 = parse_ForTagOpen();
                    if (result1 === null) {
                      result1 = parse_ForTagClose();
                      if (result1 === null) {
                        result1 = parse_WhenTagOpen();
                        if (result1 === null) {
                          result1 = parse_WhenTagClose();
                          if (result1 === null) {
                            result1 = parse_WhenErrorTag();
                            if (result1 === null) {
                              result1 = parse_WhenProgressTag();
                              if (result1 === null) {
                                result1 = parse_PlaceholderTag();
                                if (result1 === null) {
                                  result1 = parse_DataTag();
                                  if (result1 === null) {
                                    result1 = parse_AliasTag();
                                  }
                                }
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
            reportFailures--;
            if (result1 === null) {
              result1 = "";
            } else {
              result1 = null;
              pos = clone(pos3);
            }
            if (result1 !== null) {
              if (input.length > pos.offset) {
                result2 = input.charAt(pos.offset);
                advance(pos, 1);
              } else {
                result2 = null;
                if (reportFailures === 0) {
                  matchFailed("any character");
                }
              }
              if (result2 !== null) {
                result1 = [result1, result2];
              } else {
                result1 = null;
                pos = clone(pos2);
              }
            } else {
              result1 = null;
              pos = clone(pos2);
            }
            if (result1 !== null) {
              result1 = (function(offset, line, column, character) { return character; })(pos1.offset, pos1.line, pos1.column, result1[1]);
            }
            if (result1 === null) {
              pos = clone(pos1);
            }
          }
        } else {
          result0 = null;
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, content) {
        		return new HtmlFragmentNode(content.join(''));
        	})(pos0.offset, pos0.line, pos0.column, result0);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_IfTag() {
        var result0, result1, result2, result3, result4;
        var pos0, pos1, pos2, pos3;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = parse_IfTagOpen();
        if (result0 !== null) {
          result1 = parse_ContentOrEmpty();
          if (result1 !== null) {
            result2 = [];
            pos2 = clone(pos);
            pos3 = clone(pos);
            result3 = parse_ElseIfTag();
            if (result3 !== null) {
              result4 = parse_ContentOrEmpty();
              if (result4 !== null) {
                result3 = [result3, result4];
              } else {
                result3 = null;
                pos = clone(pos3);
              }
            } else {
              result3 = null;
              pos = clone(pos3);
            }
            if (result3 !== null) {
              result3 = (function(offset, line, column, elseIfNode, content) {
            			elseIfNode.content = content;
            			return elseIfNode;
            		})(pos2.offset, pos2.line, pos2.column, result3[0], result3[1]);
            }
            if (result3 === null) {
              pos = clone(pos2);
            }
            while (result3 !== null) {
              result2.push(result3);
              pos2 = clone(pos);
              pos3 = clone(pos);
              result3 = parse_ElseIfTag();
              if (result3 !== null) {
                result4 = parse_ContentOrEmpty();
                if (result4 !== null) {
                  result3 = [result3, result4];
                } else {
                  result3 = null;
                  pos = clone(pos3);
                }
              } else {
                result3 = null;
                pos = clone(pos3);
              }
              if (result3 !== null) {
                result3 = (function(offset, line, column, elseIfNode, content) {
              			elseIfNode.content = content;
              			return elseIfNode;
              		})(pos2.offset, pos2.line, pos2.column, result3[0], result3[1]);
              }
              if (result3 === null) {
                pos = clone(pos2);
              }
            }
            if (result2 !== null) {
              pos2 = clone(pos);
              pos3 = clone(pos);
              result3 = parse_ElseTag();
              if (result3 !== null) {
                result4 = parse_ContentOrEmpty();
                if (result4 !== null) {
                  result3 = [result3, result4];
                } else {
                  result3 = null;
                  pos = clone(pos3);
                }
              } else {
                result3 = null;
                pos = clone(pos3);
              }
              if (result3 !== null) {
                result3 = (function(offset, line, column, content) { return content; })(pos2.offset, pos2.line, pos2.column, result3[1]);
              }
              if (result3 === null) {
                pos = clone(pos2);
              }
              result3 = result3 !== null ? result3 : "";
              if (result3 !== null) {
                result4 = parse_IfTagClose();
                if (result4 !== null) {
                  result0 = [result0, result1, result2, result3, result4];
                } else {
                  result0 = null;
                  pos = clone(pos1);
                }
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, ifNode, content, elseIfNodes, elseContent) {
        		ifNode.content = content;
        
        		// Combine 'if' and 'elseif' into ordered list of conditional blocks
        		var conditionalBlocks = [ createConditionalBlock(ifNode) ];
        		while (elseIfNodes.length > 0) {
        			var elseIfNode = elseIfNodes.shift();
        			conditionalBlocks.push(createConditionalBlock(elseIfNode));
        		}
        
        		// TODO: Create constructor for this transformed 'if' AST node
        		return {
        			type: 'if',
        			conditionalBlocks: conditionalBlocks,
        			elseBlock: { content: elseContent }
        		};
        	})(pos0.offset, pos0.line, pos0.column, result0[0], result0[1], result0[2], result0[3]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_IfTagOpen() {
        var result0, result1, result2, result3;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = parse_OpenToken();
        if (result0 !== null) {
          if (input.substr(pos.offset, 2) === "if") {
            result1 = "if";
            advance(pos, 2);
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("\"if\"");
            }
          }
          if (result1 !== null) {
            result2 = parse_AttributeSet();
            if (result2 !== null) {
              result3 = parse_CloseToken();
              if (result3 !== null) {
                result0 = [result0, result1, result2, result3];
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, attributes) {
        		return new IfNode(attributes);
        	})(pos0.offset, pos0.line, pos0.column, result0[2]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_IfTagClose() {
        var result0, result1, result2;
        var pos0;
        
        pos0 = clone(pos);
        result0 = parse_OpenToken();
        if (result0 !== null) {
          if (input.substr(pos.offset, 3) === "/if") {
            result1 = "/if";
            advance(pos, 3);
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("\"/if\"");
            }
          }
          if (result1 !== null) {
            result2 = parse_CloseToken();
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = clone(pos0);
            }
          } else {
            result0 = null;
            pos = clone(pos0);
          }
        } else {
          result0 = null;
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_ElseIfTag() {
        var result0, result1, result2, result3;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = parse_OpenToken();
        if (result0 !== null) {
          if (input.substr(pos.offset, 6) === "elseif") {
            result1 = "elseif";
            advance(pos, 6);
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("\"elseif\"");
            }
          }
          if (result1 !== null) {
            result2 = parse_AttributeSet();
            if (result2 !== null) {
              result3 = parse_CloseToken();
              if (result3 !== null) {
                result0 = [result0, result1, result2, result3];
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, attributes) {
        		return new ElseIfNode(attributes);
        	})(pos0.offset, pos0.line, pos0.column, result0[2]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_ElseTag() {
        var result0, result1, result2;
        var pos0;
        
        pos0 = clone(pos);
        result0 = parse_OpenToken();
        if (result0 !== null) {
          if (input.substr(pos.offset, 4) === "else") {
            result1 = "else";
            advance(pos, 4);
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("\"else\"");
            }
          }
          if (result1 !== null) {
            result2 = parse_CloseToken();
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = clone(pos0);
            }
          } else {
            result0 = null;
            pos = clone(pos0);
          }
        } else {
          result0 = null;
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_ForTag() {
        var result0, result1, result2;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = parse_ForTagOpen();
        if (result0 !== null) {
          result1 = parse_ContentOrEmpty();
          if (result1 !== null) {
            result2 = parse_ForTagClose();
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, forNode, content) {
        		forNode.content = content;
        		return forNode;
        	})(pos0.offset, pos0.line, pos0.column, result0[0], result0[1]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_ForTagOpen() {
        var result0, result1, result2, result3;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = parse_OpenToken();
        if (result0 !== null) {
          if (input.substr(pos.offset, 3) === "for") {
            result1 = "for";
            advance(pos, 3);
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("\"for\"");
            }
          }
          if (result1 !== null) {
            result2 = parse_AttributeSet();
            if (result2 !== null) {
              result3 = parse_CloseToken();
              if (result3 !== null) {
                result0 = [result0, result1, result2, result3];
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, attributes) {
        		return new ForNode(attributes);
        	})(pos0.offset, pos0.line, pos0.column, result0[2]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_ForTagClose() {
        var result0, result1, result2;
        var pos0;
        
        pos0 = clone(pos);
        result0 = parse_OpenToken();
        if (result0 !== null) {
          if (input.substr(pos.offset, 4) === "/for") {
            result1 = "/for";
            advance(pos, 4);
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("\"/for\"");
            }
          }
          if (result1 !== null) {
            result2 = parse_CloseToken();
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = clone(pos0);
            }
          } else {
            result0 = null;
            pos = clone(pos0);
          }
        } else {
          result0 = null;
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_WhenTag() {
        var result0, result1, result2, result3, result4;
        var pos0, pos1, pos2, pos3;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = parse_WhenTagOpen();
        if (result0 !== null) {
          result1 = parse_ContentOrEmpty();
          if (result1 !== null) {
            pos2 = clone(pos);
            pos3 = clone(pos);
            result2 = parse_WhenErrorTag();
            if (result2 !== null) {
              result3 = parse_ContentOrEmpty();
              if (result3 !== null) {
                result2 = [result2, result3];
              } else {
                result2 = null;
                pos = clone(pos3);
              }
            } else {
              result2 = null;
              pos = clone(pos3);
            }
            if (result2 !== null) {
              result2 = (function(offset, line, column, content) { return content; })(pos2.offset, pos2.line, pos2.column, result2[1]);
            }
            if (result2 === null) {
              pos = clone(pos2);
            }
            result2 = result2 !== null ? result2 : "";
            if (result2 !== null) {
              pos2 = clone(pos);
              pos3 = clone(pos);
              result3 = parse_WhenProgressTag();
              if (result3 !== null) {
                result4 = parse_ContentOrEmpty();
                if (result4 !== null) {
                  result3 = [result3, result4];
                } else {
                  result3 = null;
                  pos = clone(pos3);
                }
              } else {
                result3 = null;
                pos = clone(pos3);
              }
              if (result3 !== null) {
                result3 = (function(offset, line, column, content) { return content; })(pos2.offset, pos2.line, pos2.column, result3[1]);
              }
              if (result3 === null) {
                pos = clone(pos2);
              }
              result3 = result3 !== null ? result3 : "";
              if (result3 !== null) {
                result4 = parse_WhenTagClose();
                if (result4 !== null) {
                  result0 = [result0, result1, result2, result3, result4];
                } else {
                  result0 = null;
                  pos = clone(pos1);
                }
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, whenNode, resolvedContent, errorContent, progressContent) {
        		whenNode.resolvedContent = resolvedContent;
        		whenNode.errorContent = errorContent;
        		whenNode.progressContent = progressContent;
        		return whenNode;
        	})(pos0.offset, pos0.line, pos0.column, result0[0], result0[1], result0[2], result0[3]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_WhenTagOpen() {
        var result0, result1, result2, result3;
        var pos0, pos1;
        
        pos0 = clone(pos);
        pos1 = clone(pos);
        result0 = parse_OpenToken();
        if (result0 !== null) {
          if (input.substr(pos.offset, 4) === "when") {
            result1 = "when";
            advance(pos, 4);
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("\"when\"");
            }
          }
          if (result1 !== null) {
            result2 = parse_AttributeSet();
            if (result2 !== null) {
              result3 = parse_CloseToken();
              if (result3 !== null) {
                result0 = [result0, result1, result2, result3];
              } else {
                result0 = null;
                pos = clone(pos1);
              }
            } else {
              result0 = null;
              pos = clone(pos1);
            }
          } else {
            result0 = null;
            pos = clone(pos1);
          }
        } else {
          result0 = null;
          pos = clone(pos1);
        }
        if (result0 !== null) {
          result0 = (function(offset, line, column, attributes) {
        		return new WhenNode(attributes);
        	})(pos0.offset, pos0.line, pos0.column, result0[2]);
        }
        if (result0 === null) {
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_WhenTagClose() {
        var result0, result1, result2;
        var pos0;
        
        pos0 = clone(pos);
        result0 = parse_OpenToken();
        if (result0 !== null) {
          if (input.substr(pos.offset, 5) === "/when") {
            result1 = "/when";
            advance(pos, 5);
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("\"/when\"");
            }
          }
          if (result1 !== null) {
            result2 = parse_CloseToken();
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = clone(pos0);
            }
          } else {
            result0 = null;
            pos = clone(pos0);
          }
        } else {
          result0 = null;
          pos = clone(pos0);
        }
        return result0;
      }
      
      function parse_WhenErrorTag() {
        var result0, result1, result2;
        var pos0;
        
        pos0 = clone(pos);
        result0 = parse_OpenToken();
        if (result0 !== null) {
          if (input.substr(pos.offset, 5) === "error") {
            result1 = "error";
            advance(pos, 5);
          } else {
            result1 = null;
            if (reportFailures === 0) {
              matchFailed("\"error\"");
            }
          }
          if (result1 !== null) {
            result2 = parse_CloseToken();
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = clone(pos0);
            }
          } else {
            result0 = null;
            pos = clone(pos0);
          }
        } else {
          result0 = null;
          pos = clone(pos0);
        }
        return result0;
      }
      
